unpackaged/main/default/objects/Bundle_SKU_Product__c/Bundle_SKU_Product__c.object-meta.xml
<CustomObject>
    <label>Bundle SKU Product</label>
    <nameField>
        <displayFormat>BSP-{0}</displayFormat>
        <label>Bundle SKU Product No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle SKU Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>