unpackaged/main/default/objects/Bundle_SKU_Product__c/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Plan</label>
    <referenceTo>Billing_Plans__c</referenceTo>
    <relationshipLabel>Bundle SKU Products</relationshipLabel>
    <relationshipName>Bundle_SKU_Products</relationshipName>
    <type>Lookup</type>
</CustomField>