unpackaged/main/default/objects/Bundle_SKU_Product__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <inlineHelpText>The bundle that the SKU Product will be part of.</inlineHelpText>
    <label>Bundle</label>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Bundle SKU Products</relationshipLabel>
    <relationshipName>Bundle_SKU_Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>