unpackaged/main/default/objects/Bundle_SKU_Product__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>Represents the discount off of list price being extended through the bundle.  To be used for the addition of the SKU Product onto the selecting Opportunity(ies).</inlineHelpText>
    <label>Discount (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>