unpackaged/main/default/objects/Bundle_SKU_Product__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Bundle SKU Products</relationshipLabel>
    <relationshipName>Bundle_SKU_Products</relationshipName>
    <type>Lookup</type>
</CustomField>