unpackaged/main/default/objects/Bundle_SKU_Product__c/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <inlineHelpText>An element of the bundle specified for the Bundle</inlineHelpText>
    <label>SKU Product</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>Bundle SKU Products</relationshipLabel>
    <relationshipName>Bundle_SKU_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>